--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -345,7 +345,7 @@
     }
 }
 
-::ng-deep .mat-expansion-panel-content {
+::ng-deep .mat-menu-item {
     font-family: 'Glacial Indifference', sans-serif;
     font-size: 16px;
 }
