--- a/src/app/pieces/tasks/repeat-task/repeat-task.component.scss
+++ b/src/app/pieces/tasks/repeat-task/repeat-task.component.scss
@@ -73,6 +73,7 @@
             position: absolute;
             left: -20px;
             top: 200px;
+            z-index: 101;
         }
     }
 
@@ -268,4 +269,10 @@
 .isActive::after, .border::after {
     border-top-right-radius: 50%;
     border-bottom-right-radius: 50%;
+}
+
+.disabledTask {
+    border-top-right-radius: 50%;
+    border-bottom-right-radius: 50%;
+    width: 400px;
 }
