--- a/src/app/pieces/tasks/task/task.component.scss
+++ b/src/app/pieces/tasks/task/task.component.scss
@@ -238,6 +238,7 @@
             position: absolute;
             left: -20px;
             top: 200px;
+            z-index: 101;
         }
     }
 
