--- a/src/app/pieces/tasks/annexe-task/annexe-task.component.html
+++ b/src/app/pieces/tasks/annexe-task/annexe-task.component.html
@@ -1,9 +1,9 @@
-<div class="piece" [ngStyle]="{'width': pieceWidth+'px'}" (mouseover)="displayMenu='show'" (mouseleave)="displayMenu='hide'; displaySymbolChoice='hide'" (click)="onClickPiece()"
+<div class="piece" [ngStyle]="{'width': pieceWidth+'px'}" (mouseover)="displayMenu='show'" (mouseleave)="displayMenu='hide'; displaySymbolChoice='hide'" (click)="!unityService.unity_isActive ? onClickPiece() : ''"
     [style.background]="task.supplementaryRole ?
     'linear-gradient(140deg, var(--piece-background-color) 0%, var(--piece-background-color) 55%,'+task.supplementaryRole.color+' 55%,'+task.supplementaryRole.color+' 100%)'
     : 'var(--piece-background-color)'"
     [matTooltip]="translate.instant('annexeTask_tooltip')"
-    matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips"
+    matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips || unityService.unity_isActive"
     [class]="pieceDetailsService.piece == task ? 'isActive' : 'border'">
     <div class="piece-attach piece-attach-left"></div>
     <div class="piece-attach piece-attach-right" [style.background]="task.supplementaryRole ? task.supplementaryRole.color : 'var(--piece-background-color)'"></div>
@@ -21,8 +21,8 @@
             matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
             <mat-menu #menuChange="matMenu">
                 <button class="piece-menu-changeMenuButton" [style.background-color]="'#b9dfe3'" mat-menu-item (click)="onClickChange('normal')">{{'task_transform_normalTask' | translate}}</button>
-                <button class="piece-menu-changeMenuButton" [style.background-color]="'#e8e3b3'" mat-menu-item (click)="onClickChange('optionnal')">{{'task_transform_optionnalTask' | translate}}</button>
-                <button class="piece-menu-changeMenuButton" [style.background-color]="'#b28386'" mat-menu-item (click)="onClickChange('final')" *ngIf="canChangeInFinalTask()">{{'task_transform_finalTask' | translate}}</button>
+                <button class="piece-menu-changeMenuButton" [style.background-color]="'#e8e3b3'" mat-menu-item (click)="onClickChange('optionnal')" *ngIf="!unityService.unity_isActive">{{'task_transform_optionnalTask' | translate}}</button>
+                <button class="piece-menu-changeMenuButton" [style.background-color]="'#b28386'" mat-menu-item (click)="onClickChange('final')" *ngIf="canChangeInFinalTask() && !unityService.unity_isActive">{{'task_transform_finalTask' | translate}}</button>
             </mat-menu>
         </div>
         <mat-icon fontIcon="backspace" (click)="onClickErase()"
@@ -121,181 +121,25 @@
         <div class="piece-form-top">
             <input class="piece-form-top-identifier" name="identifier" type="text" [(ngModel)]="task.identifier" (change)="changeIdentifier($event)" placeholder="A" min="1" maxlength="5"
             [matTooltip]="translate.instant('task_identifier_tooltip')"
-            matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"/>
+            matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"
+            [disabled]="unityService.unity_isActive"/>
             <div class="piece-form-top-title">{{'annexeTask_title' | translate}}</div> 
             <mat-icon class="piece-form-top-comment" fontIcon="comment" *ngIf="task.comments.length > 0"></mat-icon>
             <mat-icon class="piece-form-top-repeat" fontIcon="refresh" *ngIf="(task.repeat.iteration > 0 || task.repeat.while != '' || task.repeat.limitMissionRepeat) && !unityService.unity_isActive"></mat-icon>
             <span class="piece-form-top-repeat-off" *ngIf="(task.repeat.iteration == 0 && task.repeat.while == '') && task.repeat.limitMissionRepeat && !unityService.unity_isActive"></span>
         </div>
         <textarea class="piece-form-content" [(ngModel)]="task.objective" (change)="editTrace($event,'Task_action')" [style.background-image]="(i == findFirstIndexOfTaskType('annexe')[0] && j == findFirstIndexOfTaskType('annexe')[1]) ? urlIcon : ''"
-            *ngIf="!unityService.unity_isActive"    
             [placeholder]="translate.instant('annexeTask_action_placeholder')"
             [matTooltip]="translate.instant('task_action_tooltip')"
-            matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></textarea>
-
-        <div class="piece-form-content piece-form-content-unity" *ngIf="unityService.unity_isActive">
-            <div class="piece-form-content-unity-type">
-                <label for="type">{{'task_unity_type_label' | translate}}</label>
-                <select name="type" [(ngModel)]="task.typeUnity" (change)="task.resetUnityContent()">
-                    <option value="getObject">{{'task_unity_type_getObject' | translate}}</option>
-                    <option value="character">{{'task_unity_type_character' | translate}}</option>
-                    <option value="combineObjects">{{'task_unity_type_combineObjects' | translate}}</option>
-                    <option value="talkWithRole">{{'task_unity_type_talkWithRole' | translate}}</option>
-                    <option value="exchangeObjects">{{'task_unity_type_exchangeObjects' | translate}}</option>
-                    <option value="depositObject">{{'task_unity_type_depositObject' | translate}}</option>
-                    <option value="askToSeeRole">{{'task_unity_type_askToSeeRole' | translate}}</option>
-                    <option value="interactObject">{{'task_unity_type_interactObject' | translate}}</option>
-                </select>
-            </div>
-            <div class="piece-form-content-unity-typeContent">
-                    
-                <div class="piece-form-content-unity-typeContent-getObject" *ngIf="task.typeUnity == 'getObject'">
-                    <input type="number" [(ngModel)]="task.objectQuantity"/>
-                    <select [(ngModel)]="task.object">
-                        <option [ngValue]="null" selected disabled>{{'task_unity_objectName_label' | translate}}</option>
-                        <ng-container *ngFor="let ressource of scenario.ressources">
-                            <option [ngValue]="ressource" *ngIf="ressource.type == 'ressource'">{{ressource.name}}</option>
-                        </ng-container>
-                        <ng-container *ngFor="let role2 of mission.roles">
-                            <ng-container *ngIf="role2 != role">
-                                <ng-container *ngFor="let ressource of role2.ressources">
-                                    <option [ngValue]="ressource" *ngIf="ressource.type == 'ressource'">{{ressource.name}}</option>
-                                </ng-container>
-                            </ng-container>
-                        </ng-container>
-                    </select>                    
-                </div>
-
-                <div class="piece-form-content-unity-typeContent-character" *ngIf="task.typeUnity == 'character'">
-                    <select [(ngModel)]="task.character">
-                        <option [ngValue]="null" selected disabled>{{'task_unity_characterName_label' | translate}}</option>
-                        <option *ngFor="let character of scenario.characters" [ngValue]="character">{{character.name}}</option>
-                    </select>
-                </div>
-    
-                <div class="piece-form-content-unity-typeContent-combineObjects" *ngIf="task.typeUnity == 'combineObjects'">
-                    <div class="piece-form-content-unity-typeContent-combineObjects-element" *ngFor="let element of task.combineObjects, let elementIndex = index">
-                        <button mat-button class="piece-form-content-unity-typeContent-button" (click)="removeCombineObject(elementIndex)" *ngIf="task.combineObjects.length > 2"><mat-icon fontIcon="remove"></mat-icon></button>
-                        <div class="piece-form-content-unity-typeContent-combineObjects-element-object">
-                            <input type="number" [(ngModel)]="element[1]"/>
-                            <select [(ngModel)]="element[0]">
-                                <option [ngValue]="null" selected disabled>{{'task_unity_objectName_label' | translate}}</option>
-                                <ng-container *ngFor="let ressource of role.ressources">
-                                    <option [ngValue]="ressource" *ngIf="ressource.type == 'ressource'">{{ressource.name}}</option>
-                                </ng-container>
-                            </select>                        
-                        </div>
-                    </div>
-                    <button mat-button class="piece-form-content-unity-typeContent-button piece-form-content-unity-typeContent-button-add" (click)="addCombineObject()"><mat-icon fontIcon="add"></mat-icon></button>
-                </div>
-    
-                <div class="piece-form-content-unity-typeContent-talkWithRole" *ngIf="task.typeUnity == 'talkWithRole'">
-                    <select [(ngModel)]="task.role">
-                        <option [ngValue]="''" selected disabled>{{'task_unity_roleName_label' | translate}}</option>
-                        <ng-container *ngFor="let selectableRole of mission.roles">
-                            <option *ngIf="selectableRole != role && selectableRole.intitule != ''">{{selectableRole.intitule}}</option>
-                        </ng-container>
-                    </select>
-                </div>
-    
-                <div class="piece-form-content-unity-typeContent-exchangeObjects" *ngIf="task.typeUnity == 'exchangeObjects'">
-                    <div class="piece-form-content-unity-typeContent-exchangeObjects-give">
-                        <label>{{'task_unity_exchangeObjects_give_label' | translate}}</label>
-                        <div class="piece-form-content-unity-typeContent-exchangeObjects-element" *ngFor="let element of task.giveObjects, let elementIndex = index">
-                            <button mat-button class="piece-form-content-unity-typeContent-button" (click)="removeExchangeGiveObject(elementIndex)" *ngIf="task.giveObjects.length > 1"><mat-icon fontIcon="remove"></mat-icon></button>
-                            <div class="piece-form-content-unity-typeContent-exchangeObjects-element-object">
-                                <input type="number" [(ngModel)]="element[1]"/>
-                                <select [(ngModel)]="element[0]">
-                                    <option [ngValue]="null" selected disabled>{{'task_unity_objectName_label' | translate}}</option>
-                                    <ng-container *ngFor="let ressource of role.ressources">
-                                        <option [ngValue]="ressource" *ngIf="ressource.type == 'ressource'">{{ressource.name}}</option>
-                                    </ng-container>
-                                </select>                        
-                            </div>
-                        </div>
-                        <button mat-button class="piece-form-content-unity-typeContent-button piece-form-content-unity-typeContent-button-add" (click)="addExchangeGiveObject()"><mat-icon fontIcon="add"></mat-icon></button>
-                    </div>
-    
-                    <div class="piece-form-content-unity-typeContent-exchangeObjects-receive">
-                        <select [(ngModel)]="task.character">
-                            <option [ngValue]="null" selected disabled>{{'task_unity_characterName_label' | translate}}</option>
-                            <option *ngFor="let character of scenario.characters" [ngValue]="character">{{character.name}}</option>
-                        </select>
-                        <label>{{'task_unity_exchangeObjects_receive_label' | translate}}</label>
-                        <div class="piece-form-content-unity-typeContent-exchangeObjects-element" *ngFor="let element of task.receiveObjects, let elementIndex = index">
-                            <button mat-button class="piece-form-content-unity-typeContent-button" (click)="removeExchangeReceiveObject(elementIndex)" *ngIf="task.receiveObjects.length > 1"><mat-icon fontIcon="remove"></mat-icon></button>
-                            <div class="piece-form-content-unity-typeContent-exchangeObjects-element-object">
-                                <input type="number" [(ngModel)]="element[1]"/>
-                                <select [(ngModel)]="element[0]">
-                                    <option [ngValue]="null" selected disabled>{{'task_unity_objectName_label' | translate}}</option>
-                                    <ng-container *ngFor="let ressource of scenario.ressources">
-                                        <option [ngValue]="ressource" *ngIf="ressource.type == 'ressource'">{{ressource.name}}</option>
-                                    </ng-container>
-                                </select>                        
-                            </div>
-                        </div>
-                        <button mat-button class="piece-form-content-unity-typeContent-button piece-form-content-unity-typeContent-button-add" (click)="addExchangeReceiveObject()"><mat-icon fontIcon="add"></mat-icon></button>
-                    </div>
-                </div>
-    
-                <div class="piece-form-content-unity-typeContent-depositObject" *ngIf="task.typeUnity == 'depositObject'">
-                    <input type="number" [(ngModel)]="task.objectQuantity"/>
-                    <select [(ngModel)]="task.object">
-                        <option [ngValue]="null" selected disabled>{{'task_unity_objectName_label' | translate}}</option>
-                        <ng-container *ngFor="let ressource of role.ressources">
-                            <option [ngValue]="ressource" *ngIf="ressource.type == 'ressource'">{{ressource.name}}</option>
-                        </ng-container>
-                    </select>  
-                </div>
-    
-                <div class="piece-form-content-unity-typeContent-askToSeeRole" *ngIf="task.typeUnity == 'askToSeeRole'">
-                    <select [(ngModel)]="task.role">
-                        <option [ngValue]="''" selected disabled>{{'task_unity_roleName_label' | translate}}</option>
-                        <ng-container *ngFor="let selectableRole of mission.roles">
-                            <option *ngIf="selectableRole != role && selectableRole.intitule != ''">{{selectableRole.intitule}}</option>
-                        </ng-container>
-                    </select>
-                </div>
-    
-                <div class="piece-form-content-unity-typeContent-interactObject" *ngIf="task.typeUnity == 'interactObject'">
-                    <div class="piece-form-content-unity-typeContent-interactObject-select">
-                        <select [(ngModel)]="task.object">
-                            <option [ngValue]="null" selected disabled>{{'task_unity_objectName_label' | translate}}</option>
-                            <ng-container *ngFor="let ressource of scenario.ressources">
-                                <option [ngValue]="ressource" *ngIf="ressource.type == 'ressource'">{{ressource.name}}</option>
-                            </ng-container>
-                            <ng-container *ngFor="let role2 of mission.roles">
-                                <ng-container *ngFor="let ressource of role2.ressources">
-                                    <option [ngValue]="ressource" *ngIf="ressource.type == 'ressource'">{{ressource.name}}</option>
-                                </ng-container>
-                            </ng-container>
-                        </select>                         
-                    </div>
-     
-                    <div class="piece-form-content-unity-typeContent-interactObject-name">
-                        <input name="interactionName" type="text" [(ngModel)]="task.interactionName" [placeholder]="translate.instant('task_unity_interactName_placeholder')"/>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="piece-form-content-unity-infos">
-                <div class="piece-form-content-unity-infos-name">
-                    <label for="name">{{'task_unity_name_label' | translate}}</label>
-                    <input name="name" type="text" [(ngModel)]="task.name"/>
-                </div>
-                <div class="piece-form-content-unity-infos-desc">
-                    <label for="description">{{'task_unity_desc_label' | translate}}</label>
-                    <textarea name="description" [(ngModel)]="task.objective"></textarea>
-                </div>  
-            </div>
-        </div>
+            matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"
+            [disabled]="unityService.unity_isActive"></textarea>
 
         <div class="piece-form-bottom">
             <div class="piece-form-bottom-duration"
             [matTooltip]="translate.instant('task_duration_tooltip')"
             matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips">
-                <input name="value" type="number" [(ngModel)]="task.duration" (input)="durationChange()" min="0" (change)="task.duration < 0 ? task.duration = 0 : ''; editTrace($event,'Task_duration')"/>
-                <select name="unite" [(ngModel)]="task.durationUnit" (change)="durationChange(); editTrace($event,'Task_duration_unit')">
+                <input name="value" type="number" [(ngModel)]="task.duration" (input)="durationChange()" min="0" (change)="task.duration < 0 ? task.duration = 0 : ''; editTrace($event,'Task_duration')" [disabled]="unityService.unity_isActive"/>
+                <select name="unite" [(ngModel)]="task.durationUnit" (change)="durationChange(); editTrace($event,'Task_duration_unit')" [disabled]="unityService.unity_isActive">
                     <option value="UT">{{'task_duration_ut' | translate}}</option>
                     <option value="min">{{'task_duration_min' | translate}}</option>
                     <option value="tours">{{'task_duration_turn' | translate}}</option> 
@@ -307,9 +151,13 @@
             <mat-icon class="piece-form-bottom-interrupt" fontIcon="front_hand" *ngIf="task.interrupt != '' && !unityService.unity_isActive"></mat-icon>
             <button mat-button class="piece-form-bottom-prerequires" (click)="changeDisplayPrerequires()"
             [matTooltip]="translate.instant('task_prerequire_tooltip')"
-            matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips">
+            matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"
+            [disabled]="unityService.unity_isActive">
                 {{'task_prerequire_label' | translate}}
             </button>
         </div>
     </div>
+
+    <div [ngClass]="unityService.unity_isActive ? 'disabledTask' : ''" [ngStyle]="{'width': pieceWidth+'px'}" [matTooltip]="translate.instant('task_unity_disabledTask_tooltip')" matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips"></div>
+    <div [ngClass]="unityService.unity_isActive ? 'disabledTask-attach-right' : ''"></div>
 </div>
