--- a/src/app/pieces/tasks/annexe-task/annexe-task.component.scss
+++ b/src/app/pieces/tasks/annexe-task/annexe-task.component.scss
@@ -190,6 +190,7 @@
             position: absolute;
             left: -20px;
             top: 200px;
+            z-index: 101;
         }
     }
 
