--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -7,7 +7,7 @@
         </div>  
     </div>
     <div class="form-answers" *ngFor="let answer of comment.answers, let i = index;trackBy:trackByIdx">
-        <textarea [disabled]="!answerEditables[i]" [(ngModel)]="comment.answers[i]" (change)="editTrace($event,'answer_['+i+']')">Une réponse</textarea>
+        <textarea [disabled]="!answerEditables[i]" [(ngModel)]="comment.answers[i]" (change)="editTrace($event,'answer_['+i+']')"></textarea>
         <div class="form-comment-buttons">
             <button mat-button (click)="this.answerEditables[i] = !this.answerEditables[i]">{{'comments_button_edit' | translate}}</button>
             <button mat-button (click)="removeAnswer(i)">{{'comments_button_delete' | translate}}</button>
