--- a/src/app/pieces/game-characters/game-characters.component.html
+++ b/src/app/pieces/game-characters/game-characters.component.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="piece-form-character-create-infos-phone" *ngIf="unityService.unity_isActive">
                         <label for="tel">{{'char_phone_label' | translate}}</label>
-                        <input name="tel" type="tel" [(ngModel)]="character.tel" (change)="editTrace($event, 'newCharacter_tel')"/>
+                        <input name="tel" type="tel" [(ngModel)]="character.tel" (change)="editTrace($event, 'Character_['+index+']_tel')"/>
                     </div>
                     <div class="piece-form-character-create-infos-color">
                         <label for="color">{{'char_color_label' | translate}}</label>
